Add new latex section

--- a/exercisefc.Rmd
+++ b/exercisefc.Rmd
@@ -10,19 +10,20 @@ output:
     number_sections: true
     highlight: tango
 header-includes:
-- \usepackage{titling}
-- \pretitle{\begin{center}}
-# \includegraphics[width=5in,height=13in]{figs/front.jpg}
-- \posttitle{\end{center}}
-- \usepackage{fontawesome}
-- \usepackage[most]{tcolorbox}
-- \usepackage{xcolor}
-- \usepackage{sectsty}
-- \sectionfont{\color{olive}}
-- \usepackage{verbatim}
+  - \usepackage{titling}
+  - \pretitle{\begin{center}
+    \includegraphics[width=5in,height=13in]{Images/figure1.jpg}}
+  - \posttitle{\end{center}}
+  - \usepackage{fontawesome}
+  - \usepackage[most]{tcolorbox}
+  - \usepackage{xcolor}
+  - \usepackage{sectsty}
+  - \sectionfont{\color{olive}}
+  - \usepackage{verbatim}
 ---
 
 # Introduction
 
 # New section from new branch
 
+\section{This is my new section using latex}
